force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__CoordinatorEmail__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__CoordinatorEmail__c</fullName>
    <description>Email of the coordinator</description>
    <label>Coordinator Email</label>
    <type>Email</type>
</CustomField>