force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__CoordinatorName__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__CoordinatorName__c</fullName>
    <description>Name of the coordinator</description>
    <label>Coordinator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>