force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__FacilitySquareFootage__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__FacilitySquareFootage__c</fullName>
    <label>Facility Square Footage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>