force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__HasFacilitySanitationPlan__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__HasFacilitySanitationPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cleaning / Sanitation (thorough cleaning in high traffic areas, with frequent disinfection of commonly used surfaces)</inlineHelpText>
    <label>Has Facility Sanitation Plan</label>
    <type>Checkbox</type>
</CustomField>