force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__HasVulnerablePopulationPlan__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__HasVulnerablePopulationPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Vulnerable population accommodations such as special hours for seniors or medically vulnerable individuals</inlineHelpText>
    <label>Has Vulnerable Population Plan</label>
    <type>Checkbox</type>
</CustomField>