force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__MaximumApprovedOccupancy__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__MaximumApprovedOccupancy__c</fullName>
    <inlineHelpText>Facility Capacity (maximum per fire marshall)</inlineHelpText>
    <label>Maximum Approved Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>