force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__OccupancySocialDistancing__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__OccupancySocialDistancing__c</fullName>
    <inlineHelpText>Facility Capacity with Social Distancing Measures</inlineHelpText>
    <label>Occupancy with Social Distancing Measure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>