force-app/main/default/objects/BusinessLicenseApplication/fields/PublicSector__ReopeningDate__c.field-meta.xml
<CustomField>
    <fullName>PublicSector__ReopeningDate__c</fullName>
    <description>Reopening date</description>
    <label>Reopening Date</label>
    <type>DateTime</type>
</CustomField>