force-app/main/default/objects/BusinessLicenseApplication/recordTypes/Fire_Permit.recordType-meta.xml
<RecordType>
    <fullName>Fire_Permit</fullName>
    <active>true</active>
    <label>Fire Permit</label>
</RecordType>