force-app/main/default/objects/BusinessLicenseApplication/recordTypes/Salon_Establishment_License.recordType-meta.xml
<RecordType>
    <fullName>Salon_Establishment_License</fullName>
    <active>true</active>
    <label>Salon Establishment License</label>
</RecordType>