force-app/main/default/objects/BusinessLicenseApplication/recordTypes/Sign_Permit.recordType-meta.xml
<RecordType>
    <fullName>Sign_Permit</fullName>
    <active>true</active>
    <label>Sign Permit</label>
</RecordType>