force-app/main/default/objects/BusinessLicenseApplication/listViews/All_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>All_BusinessLicenseApplication</fullName>
    <filterScope>Everything</filterScope>
    <label>All Business License Applications</label>
</ListView>