force-app/main/default/objects/BusinessLicenseApplication/listViews/Final_Review_Queue_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Final_Review_Queue_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Final Review Queue</label>
    <queue>Final_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>